# SDC_Agents

./: .dockerignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  sdc-agents.example.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml
docs/dev/: COMPONENT_ASSEMBLY_DESIGN.md  SDC_AGENTS_PRD.md  landscape.md
docs/integrations/: ADK_INTEGRATION.md  adk_minimal_example.py
docs/user/: configuration.md  index.md  mcp-integration.md  tool-reference.md  workflows.md
scripts/: docker-entrypoint.sh
src/sdc_agents/: __init__.py  cli.py
src/sdc_agents/agents/: __init__.py  assembly.py  catalog.py  distribution.py  generator.py  introspect.py  knowledge.py  mapping.py  semantic_discovery.py  validation.py
src/sdc_agents/common/: __init__.py  audit.py  cache.py  config.py  exceptions.py
src/sdc_agents/toolsets/: __init__.py  assembly.py  catalog.py  distribution.py  generator.py  introspect.py  knowledge.py  mapping.py  semantic_discovery.py  validation.py
tests/: conftest.py  test_cli.py
tests/common/: test_audit.py  test_cache.py  test_config.py
tests/fixtures/: assembly_responses.py  catalog_responses.py  distribution_fixtures.py  generator_fixtures.py  introspection_results.py  knowledge_responses.py  sample_config.yaml  validation_responses.py
tests/fixtures/sample_data/: data_dictionary.md  glossary.json  lab_results.csv  records.json  vocab.ttl
tests/integration/: __init__.py  test_toolbox.py
tests/security/: test_isolation.py
tests/toolsets/: test_assembly.py  test_catalog.py  test_distribution.py  test_generator.py  test_introspect.py  test_knowledge.py  test_mapping.py  test_semantic_discovery.py  test_validation.py
